<resources>
    <string name="app_name">UdemyKotlinAndroid5</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="enter_message">enter message</string>
    <string name="send_message">send message</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="user_name">User Name</string>
    <string name="tap_to_generate_user_avatar">Tap to generate user avatar</string>
    <string name="generate_bcakground_color">Generate bcakground color</string>
    <string name="create_user">Create user</string>
    <string name="user_avatar">User avatar</string>
    <string name="add_channel">Add channel</string>
    <string name="channel_name">Channel name</string>
    <string name="channel_description">Channel description</string>
    <string name="please_login">Please Login</string>
</resources>
