<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_channel"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/channelNameTextAddChannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/channel_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray" />

    <EditText
        android:id="@+id/channelDescriptionTextAddChannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/channel_description"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray" />
</LinearLayout>